kube/tradinglab-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tradinglab-service
spec:
  selector:
    app: tradinglab-service
  ports:
    - port: 50052
      targetPort: 50052
      protocol: TCP
      name: tradinglab
  type: LoadBalancer
