kube/tradlinglab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tradinglab-service
spec:
  selector:
    app: tradinglab-service
  ports:
    - port: 50052
      targetPort: 50052
      protocol: TCP
      name: grpc
  type: ClusterIP  # Using ClusterIP as it will be accessed internally
